<resources>
    <string name="app_name">Famous News</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="author">Author</string>
    <string name="_01_january_1990">01 January 1990</string>
    <string name="error_title">Error Title</string>
    <string name="error_message">Error Message</string>
    <string name="retry">Retry</string>
</resources>
