<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/errorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="@dimen/image_height"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/no_result" />

        <TextView
            android:id="@+id/errorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/error_title"
            android:textColor="@color/colorTextTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message"
            android:textColor="@color/colorTextSubtitle" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/retry_btn_margin"
            android:background="@color/lightGreen"
            android:text="@string/retry"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>