<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        app:cardCornerRadius="@dimen/card_round_corner"
        app:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/coordinator_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_height"
                    android:scaleType="centerCrop" />

                <ProgressBar
                    android:id="@+id/progress_bar_load_photo"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_anchor="@id/iv_image"
                    app:layout_anchorGravity="center" />

                <ImageView
                    android:id="@+id/iv_bottom_shadow_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_shadow_iv_height"
                    android:src="@drawable/bottom_shadow"
                    app:layout_anchor="@id/iv_image"
                    app:layout_anchorGravity="bottom" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    app:layout_anchor="@id/iv_bottom_shadow_image"
                    app:layout_anchorGravity="bottom">

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_view_start_end_margin"
                        android:layout_marginBottom="@dimen/text_view_bottom_margin"
                        android:layout_weight="1.2"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/author"
                        android:textColor="@android:color/white"
                        app:layout_anchor="@id/iv_bottom_shadow_image" />


                    <TextView
                        android:id="@+id/tv_publishedAt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_view_start_end_margin"
                        android:layout_marginBottom="@dimen/text_view_bottom_margin"
                        android:layout_weight="0.8"
                        android:background="@drawable/round_background"
                        android:drawableStart="@drawable/ic_date"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="@dimen/date_padding"
                        android:text="@string/_01_january_1990" />

                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coordinator_layout"
                android:layout_marginStart="@dimen/text_view_start_end_margin"
                android:layout_marginTop="@dimen/text_view_top_margin"
                android:layout_marginEnd="@dimen/text_view_start_end_margin"
                android:text="@string/title"
                android:textColor="@color/colorTextTitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="@dimen/text_view_start_end_margin"
                android:layout_marginTop="@dimen/text_view_top_margin"
                android:layout_marginEnd="@dimen/text_view_start_end_margin"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tv_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_description"
                android:layout_marginStart="@dimen/text_view_start_end_margin"
                android:layout_marginTop="@dimen/text_view_top_margin"
                android:text="@string/source"
                android:textColor="@color/colorTextTitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_description"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/text_view_top_margin"
                android:layout_marginEnd="@dimen/text_view_start_end_margin"
                android:text="@string/time" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
